# StreamDiffusionV2

./: .gitignore  README.md  inference.sh  organize.py  prompt.txt  prompt_v2v.txt  pyproject.toml  requirements.txt  run_all.py  run_v2v.sh  v2v_inference.sh  v2v_inference_pipe.sh  v2v_inference_pipe_multi.sh
.github/workflows/: package-ci.yml  publish-to-pypi.yml
causvid/: data.py  dmd.py  ode_regression.py  train_distillation.py  train_ode.py  util.py
configs/: wan_causal_dmd.yaml  wan_causal_dmd_t2v.yaml  wan_causal_dmd_v2v.yaml  wan_causal_dmd_v2v_14b.yaml  wan_causal_dmd_v2v_fast.yaml
demo/: README.md  config.py  config_pipe.py  connection_manager.py  main.py  main_pipe.py  requirements.txt  start.sh  start_pipe.sh  test_online_inference.py  util.py  vid2vid.py  vid2vid_pipe.py
evaluation/: clip_score.py  warp_error.py
examples/: bird_prompt.txt  boxing_prompt.txt  train_prompt.txt
fastvideo/: distill_dcm_hy_detail_expert.py  distill_dcm_hy_semantic_expert.py  distill_dcm_wan_detail_expert.py  distill_dcm_wan_semantic_expert.py
minimal_inference/: autoregressive_inference.py  bidirectional_inference.py  longvideo_autoregressive_inference.py  v2v_generate.py
models/: __init__.py  data.py  model_interface.py  util.py
streamdiffusionv2/: __init__.py  pipeline.py
streamv2v/: __init__.py  api.py  inference.py  inference_common.py  inference_dist.py  inference_onestep.py  inference_pipe.py  inference_pipe_multi.py  inference_pipe_onestep.py  inference_wan_stream_v2v.py  inference_wo_batch.py  init_utils.py  pipeline.py
tools/: eval_video_metrics.py
(+71 files in other folders)
